// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Header component test matches snapshot in desktop view 1`] = `<div />`;

exports[`Header component test matches snapshot in mobile view - expanded 1`] = `
<div>
  <div
    class="sc-bRKDuR eWtpjx"
  >
    <a
      aria-current="page"
      class="active"
      data-discover="true"
      href="/"
    >
      Video Dashboard
    </a>
    <div
      class="sc-dTvVRJ sc-hjsuWn cqfxlF gXYciB expanded"
    >
      <div
        class="sc-hwkwBN hjIdbA"
        id="searchBarWrapper"
      >
        <div
          aria-hidden="false"
          class="sc-kNOymR hSaumW open"
          data-testid="back-button"
          id="back-button"
        >
          <i
            class="fa-solid fa-chevron-left"
          />
          <span
            class="sc-ggWZvA jmVoQc"
          >
            Close search bar
          </span>
        </div>
        <div
          class="sc-jJLAfE jPTKJC"
        >
          <input
            aria-hidden="false"
            class="sc-dYwGCk dSftMe"
            id="search-input"
            name="search"
            placeholder="Search"
            spellcheck="true"
            type="search"
          />
        </div>
      </div>
      <button
        class="sc-lgpSej gIiDoE"
        data-testid="search-button"
      >
        <span
          class="sc-ggWZvA jmVoQc"
        >
          $
          Open search bar
        </span>
        <i
          class="fa-solid fa-magnifying-glass"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Header component test matches snapshot in mobile view 1`] = `
<div>
  <div
    class="sc-bRKDuR eWtpjx"
  >
    <a
      aria-current="page"
      class="active"
      data-discover="true"
      href="/"
    >
      Video Dashboard
    </a>
    <div
      class="sc-dTvVRJ sc-hjsuWn cqfxlF gXYciB"
    >
      <div
        class="sc-hwkwBN hjIdbA hidden"
        id="searchBarWrapper"
      >
        <div
          aria-hidden="true"
          class="sc-kNOymR hSaumW close"
          data-testid="back-button"
          id="back-button"
        >
          <i
            class="fa-solid fa-chevron-left"
          />
          <span
            class="sc-ggWZvA jmVoQc"
          >
            Close search bar
          </span>
        </div>
        <div
          class="sc-jJLAfE jPTKJC"
        >
          <input
            aria-hidden="true"
            class="sc-dYwGCk dSftMe collapsed"
            id="search-input"
            name="search"
            placeholder="Search"
            spellcheck="true"
            type="search"
          />
        </div>
      </div>
      <button
        class="sc-lgpSej gIiDoE"
        data-testid="search-button"
      >
        <span
          class="sc-ggWZvA jmVoQc"
        >
          $
          Open search bar
        </span>
        <i
          class="fa-solid fa-magnifying-glass"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Header component test matches snapshot in tablet view 1`] = `
<div>
  <div
    class="sc-bRKDuR eWtpjx"
  >
    <a
      aria-current="page"
      class="active"
      data-discover="true"
      href="/"
    >
      Video Dashboard
    </a>
    <div
      class="sc-dTvVRJ sc-jwTyAe cqfxlF oeQNM"
    >
      <input
        class="sc-dYwGCk kkxkVw"
        name="search"
        placeholder="Search"
        spellcheck="true"
        type="search"
      />
      <button
        class="sc-lgpSej gGfjpP"
        data-testid="search-button"
      >
        <span
          class="sc-ggWZvA jmVoQc"
        >
          $
          Search
        </span>
        <i
          class="fa-solid fa-magnifying-glass"
        />
      </button>
    </div>
  </div>
</div>
`;
